feat: complete 14-domain business logic with production-grade enhancements
Business capabilities completed across all domains:

Core Business (P2):
- IAM: 10-dim data permissions + object-level permissions + audit
- PDM: TitleLibrary/ImageLibrary/PlatformPriceLimit + compliance check
- SOM: BuyboxMonitor/HijackAlert/SalesTeam + batch pricing + scheduled listing
- OMS: Configurable order strategy rules (JSON-driven) + plug standard rules
- SCM: 5 purchase modes (MARKET/FACTORY/TAOBAO/1688/PROCESSING) + tracking
- WMS: 5-state inventory (onHand/reserved/available/inTransit/frozen) + QC/repair
- TMS: Logistics strategy + freight estimation + carrier selection
- FMS: FIFO costing engine + cost aggregation + profit calculation + voucher

Extended Domains (P3):
- ADS: Search term harvesting + negative keyword management
- FBA: Restock cart flow + shipment exceptions + removal orders
- CRM: After-sale WMS inventory return linkage + quality issue tracking
- BI: KPI controller + Metric controller + operational reports
- DASHBOARD: Calendar/Announcement/Todo/HelpArticle/Widget management
- SYS: Approval flow engine + rule engine with JSON evaluation

Business Middleware (P4):
- Content review with multi-language sensitive word detection
- CDP with RFM analysis and customer tagging
- Compliance risk with configurable rules
- Data masking (phone/email/idCard/bankCard/name/address)
- Currency exchange with rate sync
- Payment aggregation with multi-channel support

Connectors (P5): 16 connector implementations
- Platform: AmazonSP-API/Shopify/eBay/Walmart/TikTok/Shopee/MercadoLibre/Temu
- Finance: Kingdee/Yonyou/PayPal/Stripe/LianLian/PingPong
- Logistics: Fpx/Yanwen
- Procurement: Alibaba1688
- AES encryption for connector secrets + health check + Webhook HMAC

PMS/AI Integration (P7):
- 15-state recommendation workflow (DRAFT→PENDING→APPROVED→EXECUTING→COMPLETED)
- Write whitelist enforcement (Recommendation/Draft/PendingAction/RiskAlert/InsightCard)
- Data sovereignty with A/